[gd_scene load_steps=41 format=2]

[ext_resource path="res://scripts/vehicles/warm_welcome.gd" type="Script" id=1]
[ext_resource path="res://scenes/particles/muzzle_flash_cpu.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/cameras_&_ui/follow_camera.tscn" type="PackedScene" id=3]
[ext_resource path="res://scenes/particles/rocket_flame.tscn" type="PackedScene" id=4]
[ext_resource path="res://scenes/particles/flamethrower_flame.tscn" type="PackedScene" id=5]
[ext_resource path="res://scenes/particles/flamethrower_flame_cpu.tscn" type="PackedScene" id=6]
[ext_resource path="res://scenes/particles/rocket_flame_cpu.tscn" type="PackedScene" id=7]
[ext_resource path="res://scenes/particles/drift_smoke_cpu.tscn" type="PackedScene" id=8]
[ext_resource path="res://scenes/particles/muzzle_flash.tscn" type="PackedScene" id=9]
[ext_resource path="res://scenes/particles/drift_smoke.tscn" type="PackedScene" id=10]
[ext_resource path="res://resources/materials/vehicles/warm_welcome/stock.material" type="Material" id=11]
[ext_resource path="res://resources/materials/vehicles/wheels_standard/warm_welcome.material" type="Material" id=12]
[ext_resource path="res://resources/materials/weapon_components/gatling_gun.material" type="Material" id=13]
[ext_resource path="res://scenes/particles/death_explosion.tscn" type="PackedScene" id=14]
[ext_resource path="res://resources/meshes/vehicles/wheel_0.tres" type="ArrayMesh" id=15]
[ext_resource path="res://resources/meshes/weapon_components/gatling_gun.tres" type="ArrayMesh" id=16]
[ext_resource path="res://resources/meshes/vehicles/warm_welcome.tres" type="ArrayMesh" id=17]
[ext_resource path="res://scenes/particles/death_smoke.tscn" type="PackedScene" id=18]
[ext_resource path="res://scenes/particles/death_smoke_cpu.tscn" type="PackedScene" id=19]
[ext_resource path="res://resources/sounds/vehicles/sci-fi_vehicle_spaceship_jet_engine_loop3.wav" type="AudioStream" id=20]
[ext_resource path="res://resources/sounds/weapon_components/gun_auto_barrel_spin_fast_loop.wav" type="AudioStream" id=21]
[ext_resource path="res://resources/sounds/destruction/explosion_large_06.wav" type="AudioStream" id=22]
[ext_resource path="res://resources/sounds/vehicles/tyre_skid_loop_01.wav" type="AudioStream" id=23]
[ext_resource path="res://resources/sounds/weapon_components/fire_large_flames_magic_loop_01.wav" type="AudioStream" id=24]
[ext_resource path="res://resources/sounds/vehicles/engine_generator_loop_01.wav" type="AudioStream" id=25]
[ext_resource path="res://scripts/vehicles/wheel_mesh.gd" type="Script" id=26]
[ext_resource path="res://resources/sounds/vehicles/metal_med_impact_03.wav" type="AudioStream" id=27]
[ext_resource path="res://scripts/world/shadow_setter.gd" type="Script" id=28]
[ext_resource path="res://scenes/particles/acid.tscn" type="PackedScene" id=29]
[ext_resource path="res://resources/fonts/PixeloidMono.ttf" type="DynamicFontData" id=30]
[ext_resource path="res://scripts/cameras_&_ui/score_label.gd" type="Script" id=31]
[ext_resource path="res://scenes/particles/acid_cpu.tscn" type="PackedScene" id=32]
[ext_resource path="res://scenes/particles/death_explosion_cpu.tscn" type="PackedScene" id=33]
[ext_resource path="res://scripts/vehicles/body_mesh.gd" type="Script" id=34]

[sub_resource type="PhysicsMaterial" id=1]
friction = 0.5

[sub_resource type="ConvexPolygonShape" id=6]
points = PoolVector3Array( 0.942, 0.646, 2.246, -0.942, 0.646, 2.246, 0.732, 1.283, 0.105, -0.732, 1.283, 0.105, 0.704, 1.271, -1.112, -0.704, 1.271, -1.112, 0.942, 0.903, -2.501, -0.942, 0.903, -2.501, 0.942, 0.178, -2.516, -0.942, 0.178, -2.516, 0.942, 0.032, 2.195, -0.942, 0.032, 2.195 )

[sub_resource type="DynamicFont" id=19]
size = 9
font_data = ExtResource( 30 )

[sub_resource type="CapsuleShape" id=17]
radius = 0.3
height = 1.49926

[sub_resource type="Animation" id=7]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Body/GatlingGunLeft:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector3( 90, -4.78527e-21, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Body/GatlingGunRight:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector3( 90, -4.78527e-21, 0 ) ]
}

[sub_resource type="Animation" id=8]
resource_name = "gatling_gun_rotation"
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath("Body/GatlingGunLeft:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 2 ),
"transitions": PoolRealArray( 1, 0.5, 1 ),
"update": 0,
"values": [ Vector3( 90, -90, -90 ), Vector3( 30, -90, -90 ), Vector3( -510, -90, -90 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Body/GatlingGunRight:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 2 ),
"transitions": PoolRealArray( 1, 0.5, 1 ),
"update": 0,
"values": [ Vector3( 90, -90, -90 ), Vector3( 150, -90, -90 ), Vector3( 690, -90, -90 ) ]
}

[node name="RootSpatial" type="Spatial"]
_import_path = NodePath(".")
__meta__ = {
"__editor_plugin_screen__": "3D"
}

[node name="Body" type="VehicleBody" parent="." groups=["combat_vehicle"]]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.185571, 0 )
collision_mask = 3
mass = 195.918
physics_material_override = SubResource( 1 )
script = ExtResource( 1 )
base_health = 98.0
base_engine_force = 261.12
base_boost_type = 1
nitro_force = 0.0
rocket_force = 99.84
burst_force = 0.0
scene_resource = "res://scenes/vehicles/warm_welcome.tscn"

[node name="WheelFrontLeft" type="VehicleWheel" parent="Body"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.886013, 0.16, 1.56478 )
use_as_traction = true
use_as_steering = true
wheel_roll_influence = 0.4
wheel_radius = 0.36
wheel_friction_slip = 2.0
suspension_travel = 2.0
suspension_stiffness = 40.0
damping_compression = 0.88

[node name="WheelFrontRight" type="VehicleWheel" parent="Body"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.88, 0.16, 1.565 )
use_as_traction = true
use_as_steering = true
wheel_roll_influence = 0.4
wheel_radius = 0.36
wheel_friction_slip = 2.0
suspension_travel = 2.0
suspension_stiffness = 40.0
damping_compression = 0.88

[node name="WheelBackLeft" type="VehicleWheel" parent="Body"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.886013, 0.16, -1.54034 )
use_as_traction = true
wheel_roll_influence = 0.4
wheel_radius = 0.36
wheel_friction_slip = 2.0
suspension_travel = 2.0
suspension_stiffness = 40.0
damping_compression = 0.88

[node name="WheelBackRight" type="VehicleWheel" parent="Body"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.88, 0.16, -1.54 )
use_as_traction = true
wheel_roll_influence = 0.4
wheel_radius = 0.36
wheel_friction_slip = 2.0
suspension_travel = 2.0
suspension_stiffness = 40.0
damping_compression = 0.88

[node name="CollisionShape" type="CollisionShape" parent="Body"]
shape = SubResource( 6 )

[node name="CameraBase" parent="Body" instance=ExtResource( 3 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.974, 0.9 )

[node name="BodyMesh" type="MeshInstance" parent="Body"]
physics_interpolation_mode = 1
portal_mode = 3
material_override = ExtResource( 11 )
mesh = ExtResource( 17 )
script = ExtResource( 34 )
required_setting = 1

[node name="WheelFrontLeft" type="MeshInstance" parent="Body/BodyMesh"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.886013, 0.16, 1.56478 )
portal_mode = 3
material_override = ExtResource( 12 )
mesh = ExtResource( 15 )
skeleton = NodePath("../../WheelFrontLeft")
script = ExtResource( 26 )
required_setting = 3

[node name="WheelFrontRight" type="MeshInstance" parent="Body/BodyMesh"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.88, 0.16, 1.565 )
portal_mode = 3
material_override = ExtResource( 12 )
mesh = ExtResource( 15 )
skeleton = NodePath("../../WheelFrontRight")
script = ExtResource( 26 )
required_setting = 3

[node name="WheelBackLeft" type="MeshInstance" parent="Body/BodyMesh"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.886013, 0.16, -1.54034 )
portal_mode = 3
material_override = ExtResource( 12 )
mesh = ExtResource( 15 )
skeleton = NodePath("../../WheelBackLeft")
script = ExtResource( 26 )
required_setting = 3

[node name="WheelBackRight" type="MeshInstance" parent="Body/BodyMesh"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.88, 0.16, -1.54 )
portal_mode = 3
material_override = ExtResource( 12 )
mesh = ExtResource( 15 )
skeleton = NodePath("../../WheelBackRight")
script = ExtResource( 26 )
required_setting = 3

[node name="GatlingGunLeft" type="MeshInstance" parent="Body"]
transform = Transform( 1, -8.35187e-23, 3.65072e-30, 0, -4.37114e-08, -1, 8.35187e-23, 1, -4.37114e-08, 0.718974, 0.949355, 1.82672 )
portal_mode = 3
mesh = ExtResource( 16 )
material/0 = ExtResource( 13 )
script = ExtResource( 28 )
required_setting = 3

[node name="GatlingGunRight" type="MeshInstance" parent="Body"]
transform = Transform( 1, -8.35187e-23, 3.65072e-30, 0, -4.37114e-08, -1, 8.35187e-23, 1, -4.37114e-08, -0.719, 0.949, 1.827 )
portal_mode = 3
mesh = ExtResource( 16 )
material/0 = ExtResource( 13 )
script = ExtResource( 28 )
required_setting = 3

[node name="ScoreLabel" type="Label3D" parent="Body"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2, 0 )
portal_mode = 3
pixel_size = 0.003
billboard = 1
double_sided = false
fixed_size = true
font = SubResource( 19 )
script = ExtResource( 31 )

[node name="ShotPositionLeft" type="RayCast" parent="Body"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.718498, 1.04511, 2.32913 )
enabled = true
cast_to = Vector3( 0, 0, 70 )
collision_mask = 3

[node name="ShotPositionRight" type="RayCast" parent="Body"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.718, 1.045, 2.329 )
enabled = true
cast_to = Vector3( 0, 0, 70 )

[node name="CartridgeExitLeft" type="Position3D" parent="Body"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.885225, 1.03953, 1.1936 )

[node name="CartridgeExitRight" type="Position3D" parent="Body"]
transform = Transform( -1, 0, -8.74228e-08, 0, 1, 0, 8.74227e-08, 0, -1, -0.885, 1.04, 1.194 )

[node name="FlameDamageFrontLeft" type="Area" parent="Body"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.982, 0.628, 1.124 )
collision_layer = 0
monitorable = false

[node name="CollisionShape" type="CollisionShape" parent="Body/FlameDamageFrontLeft"]
transform = Transform( -4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 1, 0, 0 )
shape = SubResource( 17 )

[node name="FlameDamageFrontRight" type="Area" parent="Body"]
transform = Transform( -1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, -0.982, 0.628, 1.124 )
collision_layer = 0
monitorable = false

[node name="CollisionShape" type="CollisionShape" parent="Body/FlameDamageFrontRight"]
transform = Transform( -4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 1, 0, 0 )
shape = SubResource( 17 )

[node name="FlameDamageBackLeft" type="Area" parent="Body"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.944, 0.853, -0.883 )
collision_layer = 0
monitorable = false

[node name="CollisionShape" type="CollisionShape" parent="Body/FlameDamageBackLeft"]
transform = Transform( -4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 1, 0, 0 )
shape = SubResource( 17 )

[node name="FlameDamageBackRight" type="Area" parent="Body"]
transform = Transform( -1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, -0.944, 0.853, -0.883 )
collision_layer = 0
monitorable = false

[node name="CollisionShape" type="CollisionShape" parent="Body/FlameDamageBackRight"]
transform = Transform( -4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 1, 0, 0 )
shape = SubResource( 17 )

[node name="MuzzleFlash" type="Spatial" parent="Body"]

[node name="Left" parent="Body/MuzzleFlash" instance=ExtResource( 9 )]
transform = Transform( 0.7, 0, 0, 0, 0.7, 0, 0, 0, 0.7, 0.718, 1.045, 2.329 )

[node name="Right" parent="Body/MuzzleFlash" instance=ExtResource( 9 )]
transform = Transform( 0.7, 0, 0, 0, 0.7, 0, 0, 0, 0.7, -0.718, 1.045, 2.329 )

[node name="CPULeft" parent="Body/MuzzleFlash" instance=ExtResource( 2 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.718, 1.045, 2.329 )

[node name="CPURight" parent="Body/MuzzleFlash" instance=ExtResource( 2 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.718, 1.045, 2.329 )

[node name="FlamethrowerParticlesFrontLeft" parent="Body" instance=ExtResource( 5 )]
transform = Transform( -4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 0.982361, 0.628073, 1.12427 )

[node name="FlamethrowerParticlesFrontRight" parent="Body" instance=ExtResource( 5 )]
transform = Transform( -4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, -0.982, 0.628, 1.124 )

[node name="FlamethrowerParticlesBackLeft" parent="Body" instance=ExtResource( 5 )]
transform = Transform( -4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 0.944181, 0.852825, -0.882994 )

[node name="FlamethrowerParticlesBackRight" parent="Body" instance=ExtResource( 5 )]
transform = Transform( -4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, -0.944, 0.853, -0.883 )

[node name="FlamethrowerCPUParticlesFrontLeft" parent="Body" instance=ExtResource( 6 )]
transform = Transform( -4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 0.982, 0.628, 1.124 )

[node name="FlamethrowerCPUParticlesFrontRight" parent="Body" instance=ExtResource( 6 )]
transform = Transform( -4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, -0.982, 0.628, 1.124 )

[node name="FlamethrowerCPUParticlesBackLeft" parent="Body" instance=ExtResource( 6 )]
transform = Transform( -4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 0.944, 0.853, -0.883 )

[node name="FlamethrowerCPUParticlesBackRight" parent="Body" instance=ExtResource( 6 )]
transform = Transform( -4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, -0.944, 0.853, -0.883 )

[node name="ExplosionParticles" parent="Body" instance=ExtResource( 14 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.76547, 0 )

[node name="ExplosionCPUParticles" parent="Body" instance=ExtResource( 33 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.76547, 0 )

[node name="DeathParticles" parent="Body" instance=ExtResource( 18 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.970645, 1.28847 )

[node name="DeathCPUParticles" parent="Body" instance=ExtResource( 19 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.971, 1.288 )

[node name="DriftParticles" type="Spatial" parent="Body"]

[node name="Left" parent="Body/DriftParticles" instance=ExtResource( 10 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.886, 0.16, -1.54 )

[node name="Right" parent="Body/DriftParticles" instance=ExtResource( 10 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.886, 0.16, -1.54 )

[node name="DriftCPUParticles" type="Spatial" parent="Body"]

[node name="Left" parent="Body/DriftCPUParticles" instance=ExtResource( 8 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.886, 0.16, -1.54 )

[node name="Right" parent="Body/DriftCPUParticles" instance=ExtResource( 8 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.886, 0.16, -1.54 )

[node name="RocketParticles" type="Spatial" parent="Body"]

[node name="Particles" parent="Body/RocketParticles" instance=ExtResource( 4 )]
transform = Transform( -1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 2.38419e-07, 0.52789, -2.69937 )

[node name="RocketCPUParticles" type="Spatial" parent="Body"]

[node name="CPUParticles" parent="Body/RocketCPUParticles" instance=ExtResource( 7 )]
transform = Transform( -1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, 0.528, -2.699 )

[node name="ReverseRocketParticles" type="Spatial" parent="Body"]

[node name="Left" parent="Body/ReverseRocketParticles" instance=ExtResource( 4 )]
transform = Transform( 0.5, 0, 0, 0, 0.5, 0, 0, 0, 1, 0.228525, 0.545199, 2.34392 )

[node name="Right" parent="Body/ReverseRocketParticles" instance=ExtResource( 4 )]
transform = Transform( 0.5, 0, 0, 0, 0.5, 0, 0, 0, 1, -0.229, 0.545, 2.344 )

[node name="ReverseRocketCPUParticles" type="Spatial" parent="Body"]

[node name="Left" parent="Body/ReverseRocketCPUParticles" instance=ExtResource( 7 )]
transform = Transform( 0.5, 0, 0, 0, 0.5, 0, 0, 0, 1, 0.229, 0.545, 2.344 )

[node name="Right" parent="Body/ReverseRocketCPUParticles" instance=ExtResource( 7 )]
transform = Transform( 0.5, 0, 0, 0, 0.5, 0, 0, 0, 1, -0.229, 0.545, 2.344 )

[node name="AcidParticles" type="Spatial" parent="Body"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.773806, 0 )

[node name="Particles" parent="Body/AcidParticles" instance=ExtResource( 29 )]

[node name="AcidCPUParticles" type="Spatial" parent="Body"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.773806, 0 )

[node name="CPUParticles" parent="Body/AcidCPUParticles" instance=ExtResource( 32 )]

[node name="JumpAudio" type="AudioStreamPlayer3D" parent="Body"]
stream = ExtResource( 27 )
unit_size = 2.0
bus = "Effects"

[node name="DeathAudio" type="AudioStreamPlayer3D" parent="Body"]
stream = ExtResource( 22 )
unit_size = 4.0
bus = "Effects"

[node name="LoopingAudio" type="Spatial" parent="Body"]

[node name="GunRotationAudio" type="AudioStreamPlayer3D" parent="Body/LoopingAudio"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.934047, 1.29713 )
stream = ExtResource( 21 )
autoplay = true
stream_paused = true
bus = "Effects"

[node name="FlameAudioLeft" type="AudioStreamPlayer3D" parent="Body/LoopingAudio"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.95702, 0.736263, 0.116806 )
stream = ExtResource( 24 )
unit_size = 2.0
autoplay = true
stream_paused = true
bus = "Effects"

[node name="FlameAudioRight" type="AudioStreamPlayer3D" parent="Body/LoopingAudio"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.957, 0.736, 0.117 )
stream = ExtResource( 24 )
unit_size = 2.0
autoplay = true
stream_paused = true
bus = "Effects"

[node name="EngineAudio" type="AudioStreamPlayer3D" parent="Body/LoopingAudio"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.503774, 1.6412 )
stream = ExtResource( 25 )
unit_size = 0.1
autoplay = true
bus = "Effects"

[node name="DriftAudio" type="AudioStreamPlayer3D" parent="Body/LoopingAudio"]
stream = ExtResource( 23 )
unit_size = 0.4
autoplay = true
stream_paused = true
bus = "Effects"

[node name="RocketAudio" type="AudioStreamPlayer3D" parent="Body/LoopingAudio"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.541278, -2.51069 )
stream = ExtResource( 20 )
unit_size = 0.7
autoplay = true
stream_paused = true
bus = "Effects"

[node name="ReverseRocketAudio" type="AudioStreamPlayer3D" parent="Body/LoopingAudio"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.543449, 2.27336 )
stream = ExtResource( 20 )
unit_size = 0.7
autoplay = true
stream_paused = true
bus = "Effects"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
playback_process_mode = 0
anims/RESET = SubResource( 7 )
anims/gatling_gun_rotation = SubResource( 8 )

[node name="RespawnTimer" type="Timer" parent="."]
process_mode = 0
wait_time = 3.0
one_shot = true

[node name="GunTimer" type="Timer" parent="."]
process_mode = 0
wait_time = 0.08
one_shot = true

[node name="StuckTimer" type="Timer" parent="."]
process_mode = 0
wait_time = 30.0

[connection signal="timeout" from="RespawnTimer" to="Body" method="_on_RespawnTimer_timeout"]
[connection signal="timeout" from="GunTimer" to="Body" method="_on_GunTimer_timeout"]
[connection signal="timeout" from="StuckTimer" to="Body" method="_on_StuckTimer_timeout"]
